crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__storage_mappings__test__data_planes_from_names.snap
---
source: crates/control-plane-api/src/server/public/graphql/storage_mappings.rs
expression: data_planes
---
[
    Some(
        StorageMappingDataPlane {
            name: "ops/dp/public/aws-us-east-1-c1",
            cloud_provider: Aws,
            region: "us-east-1",
            is_public: true,
        },
    ),
    Some(
        StorageMappingDataPlane {
            name: "ops/dp/private/acmeCo/gcp-us-central1-c2",
            cloud_provider: Gcp,
            region: "us-central1",
            is_public: false,
        },
    ),
    None,
]
